--- a/CuiJian/Base.lproj/Main.storyboard
+++ b/CuiJian/Base.lproj/Main.storyboard
@@ -615,30 +615,56 @@
                                             <rect key="frame" x="0.0" y="66" width="328" height="392"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <prototypes>
-                                                <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="99v-70-frk">
+                                                <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="songListCellIdentifier" id="99v-70-frk" customClass="SongListCell" customModule="CuiJian" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="28" width="328" height="44"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="99v-70-frk" id="ij2-Uu-o9A">
                                                         <rect key="frame" x="0.0" y="0.0" width="328" height="43.5"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
-                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wil-EQ-b4c">
-                                                                <rect key="frame" x="291" y="5" width="29" height="34"/>
+                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rightArrow" translatesAutoresizingMaskIntoConstraints="NO" id="wil-EQ-b4c">
+                                                                <rect key="frame" x="290" y="12" width="20" height="20"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="20" id="MAh-G1-9gz"/>
+                                                                    <constraint firstAttribute="width" constant="20" id="qCE-MR-dKX"/>
+                                                                </constraints>
                                                             </imageView>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="47U-s3-Vh1">
-                                                                <rect key="frame" x="8" y="11" width="42" height="21"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="47U-s3-Vh1">
+                                                                <rect key="frame" x="18" y="11" width="16" height="21"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="21" id="6MG-9j-WLU"/>
+                                                                    <constraint firstAttribute="width" constant="16" id="wVd-A8-WMr"/>
+                                                                </constraints>
+                                                                <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="13"/>
+                                                                <color key="textColor" red="0.42745098039215684" green="0.42745098039215684" blue="0.42745098039215684" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1f6-zW-yYx">
-                                                                <rect key="frame" x="58" y="10" width="42" height="21"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="阳光下的梦" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1f6-zW-yYx">
+                                                                <rect key="frame" x="39" y="11" width="167" height="21"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="21" id="IPF-Ml-NSW"/>
+                                                                </constraints>
+                                                                <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="17"/>
+                                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                         </subviews>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                        <constraints>
+                                                            <constraint firstItem="wil-EQ-b4c" firstAttribute="leading" secondItem="1f6-zW-yYx" secondAttribute="trailing" constant="84" id="6et-Zn-AMf"/>
+                                                            <constraint firstItem="1f6-zW-yYx" firstAttribute="centerY" secondItem="47U-s3-Vh1" secondAttribute="centerY" id="9NI-tG-m9A"/>
+                                                            <constraint firstItem="wil-EQ-b4c" firstAttribute="centerY" secondItem="47U-s3-Vh1" secondAttribute="centerY" id="NIL-T6-d7h"/>
+                                                            <constraint firstItem="1f6-zW-yYx" firstAttribute="leading" secondItem="47U-s3-Vh1" secondAttribute="trailing" constant="5" id="URe-wF-WoD"/>
+                                                            <constraint firstAttribute="leadingMargin" secondItem="47U-s3-Vh1" secondAttribute="leading" constant="-10" id="VD4-ZQ-kmf"/>
+                                                            <constraint firstItem="47U-s3-Vh1" firstAttribute="centerY" secondItem="ij2-Uu-o9A" secondAttribute="centerY" id="WjE-Cd-aZO"/>
+                                                            <constraint firstAttribute="trailingMargin" secondItem="wil-EQ-b4c" secondAttribute="trailing" constant="10" id="Zis-Py-6r8"/>
+                                                        </constraints>
                                                     </tableViewCellContentView>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <connections>
+                                                        <outlet property="songListIndex" destination="47U-s3-Vh1" id="zPI-Fq-ori"/>
+                                                        <outlet property="songName" destination="1f6-zW-yYx" id="53X-Ij-w9f"/>
+                                                    </connections>
                                                 </tableViewCell>
                                             </prototypes>
                                         </tableView>
@@ -677,6 +703,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="songListTable" destination="aoD-GQ-ITn" id="jKu-7Y-u4r"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NxR-lk-Psm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -799,6 +828,7 @@
         <image name="ldLogo" width="130" height="28"/>
         <image name="news" width="414" height="134"/>
         <image name="newsBt" width="92" height="86"/>
+        <image name="rightArrow" width="8" height="13"/>
         <image name="songBgImage" width="750" height="1334"/>
         <image name="songBgParaImage" width="958" height="1618"/>
         <image name="songListBtn" width="26" height="16"/>
